import bootsrap stylessheet and fontawesome

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,10 @@
+
 $primary-color: #CF4647;
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,700,300);
 $font-family-base: 'Raleway', sans-serif;
-// Import bootstrap and fontawesome
-@import "bootstrap";
-@import "font-awesome";
+@import "../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap";
+@import "../bower_components/font-awesome/scss/font-awesome";
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,700,300);
+
 body{
   background-color: $primary-color;
   p{
