--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 
 $primary-color: #CF4647;
+$second-color: #ffffff;
 $font-family-base: 'Raleway', sans-serif;
 @import "../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap";
 @import "../bower_components/font-awesome/scss/font-awesome";
@@ -7,16 +8,25 @@ $font-family-base: 'Raleway', sans-serif;
 
 body{
   background-color: $primary-color;
+  margin: 20px 0 0 0;
   p{
     color: #ffffff;
   }
   h1{
-    color: #000000;
+    color: #ffffff;
   }
   h2{
-    color: #777777;
+    color: #333333;
   }
   header{
     width: 100%;
   }
+}
+.box{
+  margin: 20px 0;
+  padding: 40px;
+  background-color: $second-color;
+  height: auto;
+  width: 50%;
+
 }
