--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,7 +15,7 @@ body{
   h1{
     color: #ffffff;
   }
-  h2{
+  h2, h3{
     color: #333333;
   }
   header{
@@ -27,6 +27,8 @@ body{
   padding: 40px;
   background-color: $second-color;
   height: auto;
-  width: 50%;
-
+  width: 100%;
+}
+.img-center{
+margin: auto;
 }
